--- a/index.html
+++ b/index.html
@@ -37,19 +37,27 @@
           <div class="input-box">
             <div>
               <label for="">S.No:</label>
-              <input type="text" class="field field1" />
+              <input type="text" class="field field1" placeholder="Enter No" />
             </div>
           </div>
           <div class="input-box">
             <div>
               <label for="">Task Name:</label>
-              <input type="text" class="field field2" />
+              <input
+                type="text"
+                class="field field2"
+                placeholder="Enter Task"
+              />
             </div>
           </div>
           <div class="input-box">
             <div>
               <label for="">Status:</label>
-              <input type="text" class="field field3" />
+              <input
+                type="text"
+                class="field field3"
+                placeholder="Enter Status"
+              />
             </div>
           </div>
 
@@ -70,6 +78,13 @@
             </div>
             <div class="list3">
               <p>Status</p>
+            </div>
+            <div class="list4">
+              <p>Edit</p>
+              <i class="fa fa-pen-to-square"></i>"
+            </div>
+            <div class="list5">
+              <p>Remove</p>
             </div>
           </div>
         </div>
