--- a/index.html
+++ b/index.html
@@ -4,91 +4,63 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo List From Karthees</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
+    <title>Todo-List</title>
     <link rel="stylesheet" href="../webfonts/all.min.css" />
     <link rel="stylesheet" href="../webfonts/fontawesome.min.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="overlay"></div>
     <div class="container">
-      <div class="overlay"></div>
-      <div class="todo-container">
-        <h2>Add Todo List</h2>
-        <div class="add-btn">
+      <div class="todo-app">
+        <div class="header">
+          <h1>My Todo-List</h1>
+        </div>
+        <div class="btn">
           <input
-            type="button"
-            class="add-button"
-            onclick="show()"
+            type="submit"
+            class="addtask-btn"
+            onclick="addnewtask()"
             value="Add New Task"
           />
         </div>
-        <div class="todo-insert">
-          <i class="fa fa-xmark cancle" onclick="unshow()"></i>
-          <div class="input-box">
-            <div>
-              <label for="">S.No:</label>
-              <input type="text" class="field field1" placeholder="Enter No" />
+        <div class="list-container">
+          <div class="lists">
+            <div class="list list-name">
+              <h2 class="headline">Task Name</h2>
             </div>
-          </div>
-          <div class="input-box">
-            <div>
-              <label for="">Task Name:</label>
-              <input
-                type="text"
-                class="field field2"
-                placeholder="Enter Task"
-              />
+            <div class="list list-status">
+              <h2 class="headline">Status</h2>
             </div>
-          </div>
-          <div class="input-box">
-            <div>
-              <label for="">Status:</label>
-              <input
-                type="text"
-                class="field field3"
-                placeholder="Enter Status"
-              />
+            <div class="list-icon list-edit">
+              <h2 class="headline">Edit</h2>
             </div>
-          </div>
-
-          <input
-            type="button"
-            class="add-task"
-            onclick="addtask()"
-            value="Add Task"
-          />
-        </div>
-        <div class="list-align">
-          <div class="list-content">
-            <div class="list">
-              <p>S.No</p>
-            </div>
-            <div class="list2">
-              <p>Name</p>
-            </div>
-            <div class="list3">
-              <p>Status</p>
-            </div>
-            <div class="list4">
-              <p>Edit</p>
-            </div>
-            <div class="list5">
-              <p>Remove</p>
+            <div class="list-icon list-remove">
+              <h2 class="headline">Remove</h2>
+              
             </div>
           </div>
         </div>
       </div>
     </div>
-    <script src="main.js"></script>
+    <div class="new-task-container">
+      <div class="task-input-container">
+        <i class="fa fa-xmark icon" onclick="closenewtask()"></i>
+        <div class="task-inputs name-box">
+          <label>Task Name:</label>
+          <input type="text" class="task-name" placeholder="Enter New Task" />
+        </div>
+        <div class="task-inputs status-box">
+          <label>Status:</label>
+          <input type="text" class="task-status" placeholder="Enter Task Status"/>
+        </div>
+        <div class="btn">
+          <input type="submit" class="add-task-btn" onclick="newtask()" />
+          <input type="submit" class="add-task-btn cancle" onclick="closenewtask()"value="Cancle"/>
+        </div>
+      </div>
+    </div>
+
+    <script src="script.js"></script>
   </body>
 </html>
