--- a/index.html
+++ b/index.html
@@ -4,91 +4,58 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Todo List From Karthees</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
-    />
-    <link rel="stylesheet" href="style.css" />
+    <title>Todo List</title>
     <link rel="stylesheet" href="../webfonts/all.min.css" />
     <link rel="stylesheet" href="../webfonts/fontawesome.min.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="overlay"></div>
     <div class="container">
-      <div class="overlay"></div>
-      <div class="todo-container">
-        <h2>Add Todo List</h2>
-        <div class="add-btn">
-          <input
-            type="button"
-            class="add-button"
-            onclick="show()"
-            value="Add New Task"
-          />
+        <div class="todo-container">
+            <div class="todo-app">
+                <h1>Todo List</h1>
+                <button class="new-task-btn" onclick="newTaskAppOpen()">Add New Task</button>
+            </div>
+            <div class="list-heading">
+                <p>S.No</p>
+                <p>Task Name</p>
+                <p>Task Status</p>
+                <p>Edit</p>
+                <p>Remove</p>
+            </div>
+            <div class="list-items">
+                
+            </div>
         </div>
-        <div class="todo-insert">
-          <i class="fa fa-xmark cancle" onclick="unshow()"></i>
-          <div class="input-box">
-            <div>
-              <label for="">S.No:</label>
-              <input type="text" class="field field1" placeholder="Enter No" />
-            </div>
-          </div>
-          <div class="input-box">
-            <div>
-              <label for="">Task Name:</label>
-              <input
-                type="text"
-                class="field field2"
-                placeholder="Enter Task"
-              />
-            </div>
-          </div>
-          <div class="input-box">
-            <div>
-              <label for="">Status:</label>
-              <input
-                type="text"
-                class="field field3"
-                placeholder="Enter Status"
-              />
-            </div>
-          </div>
-
-          <input
-            type="button"
-            class="add-task"
-            onclick="addtask()"
-            value="Add Task"
-          />
-        </div>
-        <div class="list-align">
-          <div class="list-content">
-            <div class="list">
-              <p>S.No</p>
-            </div>
-            <div class="list2">
-              <p>Name</p>
-            </div>
-            <div class="list3">
-              <p>Status</p>
-            </div>
-            <div class="list4">
-              <p>Edit</p>
-            </div>
-            <div class="list5">
-              <p>Remove</p>
-            </div>
-          </div>
-        </div>
-      </div>
     </div>
-    <script src="main.js"></script>
+    <div class="add-task-app">
+    <div class="add-task-container">
+        <i class="fa fa-xmark" onclick="newTaskAppClose()"></i>
+        <h2>Add Todo LIst</h2>
+
+        <div class="task-input">
+            <label>S.No: </label>
+            <input type="text" class="task-no" placeholder="Enter Task No">
+        </div>
+
+        <div class="task-input">
+            <label>Task Name: </label>
+            <input type="text" class="task-name" placeholder="Enter Task Name">
+        </div>
+                    
+        <div class="task-input">
+            <label>Task Status: </label>
+            <input type="text" class="task-status" placeholder="Enter Task Status">
+        </div>
+
+        <button class="add-task-btn" onclick="addTask()">Add New Task</button>
+    </div>
+</div>
+<!-- <div class="update">
+<input type="text" class="update-no" >
+<button onclick="updateTask(event)">Submit</button>
+</div> -->
+    <script src="script.js"></script>
   </body>
 </html>
